fixed gap between cards

--- a/src/scss/components/_results.scss
+++ b/src/scss/components/_results.scss
@@ -15,7 +15,7 @@
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(2, 1fr);
     grid-column-gap: 2rem;
-    grid-row-gap: 2rem;
+    grid-row-gap: 0.5rem;
 
     @media only screen and (max-width: 1400px) {
       grid-template-columns: repeat(3, 1fr);
